Mon May 23 19:37:50 2005  Tim Janik  <timj@gtk.org>

	* bsecore.idl: added MidiChannelEventType and MidiChannelEvent to export
	midi events.

	* bseproject.h, bseproject.c, bseproject.proc: allow fetching a projects
	midi notifier.

	* bsejanitor.[hc]: removed user-msg* properties and added status
	message string property. removed ::close signal (which was unused and
	stopped to provide proper notification).

	* bsejanitor.proc: removed msg type from bse-script-set-status.

	* bsemidireceiver.hh, bsemidireceiver.cc: removed notifier getter.
	notify events in the correct order. properly wake up midi notifiers.

	* bsemidinotifier.[hc]: emit notification about MIDI events, using a
	MidiChannelEvent structure.

	* bsemidievent.c: removed cruft.

	* bseserver.c: setup midi notifier main loop source.

	* bseglue.[hc]: removed rorecord and rosequence type registration
	which were now unused.

Sat May 21 02:39:14 2005  Tim Janik  <timj@gtk.org>

	* bsemain.[hc]: introduced bse_init_textdomain_only(), which is used 
	internally and is usefull for programs like bsesh.

	* bsescripthelper.c: translate script blurb and script parameter names
	which are not translated by the scripts themselves. the reason is that
	scripts shouldn't translate any strings during procedure registration
	phase (only markup for translation). this allowes us to generate 
	reliable keywords for parameter names and procedure categories from 
	the english names, and provide the translated version by deferred
	translation.

Thu May 19 23:07:12 2005  Tim Janik  <timj@gtk.org>

	* bsecore.idl: renamed UserMsgType to MsgType and synced message types
	with SFI message types. renamed UserMsg to Message. added message type
	identifier and label to Message.

	* bsejanitor.proc: removed janitor arg from script internal methods.
	renamed script internal methods to bse-script- procedures. changed
	message handling to not require a round trip (for janitor handle) and
	to support all fields of BseMessage. 
