@@ -1,3 +1,15 @@
+Wed May 25 21:48:22 2005  Tim Janik  <timj@gtk.org>
+
+	* bsecore.idl: added stamp_ticks to record SongTiming.
+
+	* bsesong.c: fill in stamp_ticks field of BseSongTiming struct.
+
+	* bsejanitor.c: added ::shutdown signal, similar to the old ::closed 
+	signal, but signals the start of connection take down, so the connection
+	doesn't have to be closed.
+
+	* bseserver.proc: use BseJanitor::shutdown for script registration.
+
 Mon May 23 19:37:50 2005  Tim Janik  <timj@gtk.org>
 
 	* bsecore.idl: added MidiChannelEventType and MidiChannelEvent to export
